# SEP490_Gr66_SkillGapGuide

./: .gitignore  README.md  database.sql  package-lock.json  rawdatafornghe.sql
Client/: index.html  package-lock.json  package.json  vite.config.js
Client/src/: App.jsx  console-shim.js  index.jsx  main.jsx
Client/src/components/: AuthCallback.jsx  ErrorBoundary.jsx  ExportExcelButton.jsx  PageSkeleton.jsx  PieSelect.jsx  StatusDot.jsx
Client/src/config/: uploadImageSupabase.js
Client/src/constants/: apiEndpoints.js
Client/src/context/: AuthContext.jsx  UserContext.jsx
Client/src/forms/: LoginForm.jsx  RegisterForm.jsx
Client/src/hooks/: useUsers.js
deploy/: .gitignore  app.py  config.py  example.env.yaml  nginx-websocket-fix.md  pyproject.toml  quickly-setup-sh-file.md  restart-be.md  setup-llm.md
docs/: RUN_INSTRUCTIONS.md  init_db.md  install_lib.md
sgg/: .gitignore  pom.xml
sgg/src/main/java/com/skillgapguide/sgg/Controller/: AdminController.java  AuthController.java  BusinessAdminController.java  CVController.java  ChatController.java  ContentManagerController.java  CourseController.java  EmbeddingBGEM3.py  FeedbackController.java  FileHistoryController.java  JobController.java  JobMatchController.java  JobScraperController.java  PaymentController.java  ProfileController.java  SkillGapController.java  StaticPageController.java  SubscriptionController.java  SystemAdminController.java  UserController.java  UserFavoriteJob.java  UserFavoriteJobController.java  UserFavoriteMissingSkillController.java  embeddings.json  pyproject.toml
(+301 files in other folders)
